--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -23,7 +23,7 @@
 
 <div class="container">
   {% for ddt in ddtlist %}
-  <div class="border p-3 row m-3 rounded">
+  <div class="border p-3 row m-3 rounded row-data">
     <div class="col-md-8 col-sm-12"> 
       <p>Numero DDT: {{ddt['CEDTDDTNR']}}</p>
       <p>Data certificazione: {{ddt['CEDTCEDT']}}</p> 
